--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "check-format": "prettier --check .",
     "build": "concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
-    "build:types": "tsc",
-    "heroku-postbuild": "ng build root-config --configuration production"
+    "build:types": "tsc"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
