cambios para habilitar cors con root config

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "single-spa": "^5.9.3"
   },
