--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "check-format": "prettier --check .",
     "build": "concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
-    "build:types": "tsc"
+    "build:types": "tsc",
+    "heroku-postbuild": "webpack -p"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
